--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="profil.png" alt="Bootstrap" width="50" height="auto">
+      <img src="Logo.png" alt="Bootstrap" width="40" height="auto">
     </a>
     <div><a href="" class="reset-link-color d-flex"><strong>Home</strong></a></div>
   </div>
