--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <!--Google font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body class="body">
     <nav class="navbar fixed-top">
@@ -25,24 +29,26 @@
     </div>
   </div>
 </div>
+<br>
+<br>
 
 
 
 <!--About-->
-<div class="container d-absolute text-center" style="background-color: #FFCC00; opacity: 20%;"><strong>--About--</strong></div>
+<div class="container d-absolute text-center" style=""><strong class="text-white">I WANT TO LEARN :</strong></div>
 <div class="container text-center">
   <div class="row g-2">
     <div class="col-6">
-      <div class="p-3">Custom column padding</div>
+      <div class="p-3"><img src="tailwind.png" alt="" style="width: 100%; max-width: 500px; height: auto;"></div>
     </div>
     <div class="col-6">
-      <div class="p-3">Custom column padding</div>
+      <div class="p-3"><img src="reactjs.png" alt="" style="width: 100%; max-width: 500px; height: auto;"></div>
     </div>
     <div class="col-6">
-      <div class="p-3">Custom column padding</div>
+      <div class="p-3"><img src="js.png" alt="" style="width: 100%; max-width: 500px; height: auto;"></div>
     </div>
     <div class="col-6">
-      <div class="p-3">Custom column padding</div>
+      <div class="p-3"><img src="figma.png" alt="" style="width: 100%; max-width: 500px; height: auto;"></div>
     </div>
   </div>
 </div>
