--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a class="navbar-brand" href="#">
       <img src="Logo.png" alt="Bootstrap" width="50" height="auto">
     </a>
-    <div><a href="" class="reset-link-color d-flex"><strong>+62 8561507488</strong></a></div>
+    <div><a href="https://wa.me/628561507488" class="reset-link-color d-flex"><strong>+62 8561507488</strong></a></div>
   </div>
 </nav>
 <div class="container text-left text-dark" style="padding-top: 140px;">
