rubah dikit bos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <div><a href="https://wa.me/628561507488" class="reset-link-color d-flex"><strong>+62 8561507488</strong></a></div>
   </div>
 </nav>
-<div class="container text-left text-dark" style="padding-top: 140px;">
+
+<!--Start Content-->
+<div class="container text-left text-dark" style="padding-top: 130px;">
   <div class="row">
     <div class="col">
       <h1 class="h1">_____Hello, 
@@ -35,32 +37,31 @@
 
 
 <!--About-->
-<div class="container d-absolute text-center" style=""><strong class="text-white">I WANT TO LEARN :</strong></div>
+<div class="container d-absolute text-center" style="background-color: rgb(37, 37, 37); padding-bottom: 20px; padding-top: 20px; border-bottom-left-radius: 50px; border-bottom-right-radius: 50px;"><strong class="text-white" style="font-size: x-large;">I WANT TO LEARN :</strong></div>
 <div class="container text-center">
-  <div class="row g-2">
-    <div class="col-6">
-      <div class="p-3"><img src="tailwind.png" alt="" style="width: 100%; max-width: 400px; height: auto;"></div>
+  <div class="container text-center">
+  <div class="row align-items-start" style="padding-top: 20px;">
+    <div class="col">
+      <img src="reactjs.png" alt="" style="width: 100%; max-width: 400px; height: auto;">
     </div>
-    <div class="col-6">
-      <div class="p-3"><img src="reactjs.png" alt="" style="width: 100%; max-width: 400px; height: auto;"></div>
+    <div class="col">
+      <img src="js.png" alt="" style="width: 100%; max-width: 400px; height: auto;">
     </div>
-    <div class="col-6">
-      <div class="p-3"><img src="js.png" alt="" style="width: 100%; max-width: 370px; height: auto;"></div>
+    <div class="col">
+      <img src="figma.png" alt="" style="width: 100%; max-width: 400px; height: auto;">
     </div>
-    <div class="col-6">
-      <div class="p-3"><img src="figma.png" alt="" style="width: 100%; max-width: 400px; height: auto;"></div>
+    <div class="col">
+      <img src="github.png" alt="" style="width: 100%; max-width: 400px; height: auto;">
     </div>
   </div>
-</div>
+<!--End Content-->
 
 <footer class="bd-footer py-4 py-md-5 bg-body-tertiary">
   <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
     <div class="row">
         <div class="col-lg-6 mb-3">
-          <a class="d-inline-flex align-item-center mb-2 text-body-emphasis text-decoration-none" href="" arial-label="Bootstrap">
-            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-behance" viewBox="0 0 16 16">
-            <path d="M4.654 3c.461 0 .887.035 1.278.14.39.07.711.216.996.391s.497.426.641.747c.14.32.216.711.216 1.137 0 .496-.106.922-.356 1.242-.215.32-.566.606-.997.817.606.176 1.067.496 1.348.922s.461.957.461 1.563c0 .496-.105.922-.285 1.278a2.3 2.3 0 0 1-.782.887c-.32.215-.711.39-1.137.496a5.3 5.3 0 0 1-1.278.176L0 12.803V3zm-.285 3.978c.39 0 .71-.105.957-.285.246-.18.355-.497.355-.887 0-.216-.035-.426-.105-.567a1 1 0 0 0-.32-.355 1.8 1.8 0 0 0-.461-.176c-.176-.035-.356-.035-.567-.035H2.17v2.31c0-.005 2.2-.005 2.2-.005zm.105 4.193c.215 0 .426-.035.606-.07.176-.035.356-.106.496-.216s.25-.215.356-.39c.07-.176.14-.391.14-.641 0-.496-.14-.852-.426-1.102-.285-.215-.676-.32-1.137-.32H2.17v2.734h2.305zm6.858-.035q.428.427 1.278.426c.39 0 .746-.106 1.032-.286q.426-.32.53-.64h1.74c-.286.851-.712 1.457-1.278 1.848-.566.355-1.243.566-2.06.566a4.1 4.1 0 0 1-1.527-.285 2.8 2.8 0 0 1-1.137-.782 2.85 2.85 0 0 1-.712-1.172c-.175-.461-.25-.957-.25-1.528 0-.531.07-1.032.25-1.493.18-.46.426-.852.747-1.207.32-.32.711-.606 1.137-.782a4 4 0 0 1 1.493-.285c.606 0 1.137.105 1.598.355.46.25.817.532 1.102.958.285.39.496.851.641 1.348.07.496.105.996.07 1.563h-5.15c0 .58.21 1.11.496 1.396m2.24-3.732c-.25-.25-.642-.391-1.103-.391-.32 0-.566.07-.781.176s-.356.25-.496.39a.96.96 0 0 0-.25.497c-.036.175-.07.32-.07.46h3.196c-.07-.526-.25-.882-.497-1.132zm-3.127-3.728h3.978v.957h-3.978z"/>
-            </svg>
+          <a class="d-inline-flex align-item-left mb-2 text-body-emphasis text-decoration-none" href="" arial-label="Bootstrap" style="align-content: start;">
+            <img src="Logo.png" alt="" style="width: 50px; height: auto;">
           </a>
           <ul class="list-unstyled">
             <li>Gunakan setiap rintangan sebagai batu loncatan, bukan penghalang. Ingat, kamu sudah melewati banyak hal yang dulu kamu kira mustahil. </li>
