--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Yusuf Pages</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <!--Google font-->
@@ -42,16 +42,16 @@
   <div class="container text-center">
   <div class="row align-items-start" style="padding-top: 20px;">
     <div class="col">
-      <img src="reactjs.png" alt="" style="width: 100%; max-width: 400px; height: auto;">
+      <img src="reactjs.png" alt="" style="width: 80%; max-width: 400px; height: auto;">
     </div>
     <div class="col">
-      <img src="js.png" alt="" style="width: 100%; max-width: 400px; height: auto;">
+      <img src="js.png" alt="" style="width: 80%; max-width: 400px; height: auto;">
     </div>
     <div class="col">
-      <img src="figma.png" alt="" style="width: 100%; max-width: 400px; height: auto;">
+      <img src="figma.png" alt="" style="width: 80%; max-width: 400px; height: auto;">
     </div>
     <div class="col">
-      <img src="github.png" alt="" style="width: 100%; max-width: 400px; height: auto;">
+      <img src="github.png" alt="" style="width: 80%; max-width: 400px; height: auto;">
     </div>
   </div>
 <!--End Content-->
