--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </div>
 <!--End Content-->
 
-<footer class="bd-footer py-4 py-md-5 bg-body-tertiary">
+<footer class="bd-footer py-4 py-md-5 bg-white" style="padding-top: 20px;">
   <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
     <div class="row">
         <div class="col-lg-6 mb-3">
